@@ -135,7 +135,8 @@ enum {
 	NPC_CHASE_DISTANCE = 40,
 	ALLOW_TO_TANK = 41,
 	IGNORE_ROOT_AGGRO_RULES = 42,
-	MAX_SPECIAL_ATTACK = 43
+	CASTING_RESIST_DIFF = 43,
+	MAX_SPECIAL_ATTACK = 44
 };
 
 typedef enum {	//fear states
